--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.8.0'
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.8.0'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.0'
 	implementation group: 'com.sun.jersey.contribs', name: 'jersey-apache-client', version: '1.19.4'
 	implementation group: 'com.sun.jersey', name: 'jersey-core', version: '1.19.4'
 	implementation group: 'com.sun.jersey.contribs', name: 'jersey-apache-client4', version: '1.19.4'
@@ -58,6 +58,12 @@ ext {
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
+}
+
+jar {
+	manifest {
+		attributes 'Main-Class': 'br.com.evote.EvoteApplication'
 	}
 }
 
@@ -84,11 +90,5 @@ jacocoTestReport {
 		xml.required = false
 		csv.required = false
 		html.outputLocation = layout.buildDirectory.dir('jacoco')
-	}
-}
-
-jar {
-	manifest {
-		attributes 'Main-Class': 'br.com.evote.EvoteApplication'
 	}
 }
