--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,6 +13,7 @@ spring.jpa.properties.hibernate.type=info
 spring.jpa.hibernate.ddl-auto=none
 
 
+#EUREKA
 eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka/
 eureka.client.instance.preferIpAddress = true
 spring.application.name = usuarioclient
